src/article/index.scss
@use '../sass/buttons';
@use '../sass/settings';
@use '../sass/typography';

@mixin _right-column-section() {
  border-bottom: settings.$border;
  margin-top: 36px;
  padding-bottom: 36px;

  @media only all and (min-width: 730px) {
    margin-left: auto;
    margin-right: auto;
    width: 230px;
  }
}

img {
   max-width: 100%;
}

.content-header {
  margin: 0;
  text-align: left;
  border-bottom: settings.$border;
  padding-bottom: 36px;
}

.content-header__title {
  @include typography.heading-1();
  margin-bottom: 36px;
  margin-top: 0;
}

.content-header__authors {
  list-style: none;
  padding: 0;
}

.person {
  @include typography.author-list-text();
  display: inline;

  &:last-child .person__family_name:last-child:after {
    content: "";
  }
}

.person__family_name {
  &:after {
    content: " ";
  }

  &:last-child:after {
    content: ", ";
  }
}

.person__given_name:after {
  content: " ";
}

.person__affiliations {
  display: none;
}

.content-header__affiliations {
  list-style: none;
  padding: 0;
}

.organisation {
  @include typography.affiliations-list-text();
  display: inline;

  &:after {
    content: " • ";
  }

  &:last-child:after {
    content: "";
  }
}
.organisation__address {
  display: inline;
  font-style: normal;
  &::before {
    content: ', ';
  }
}

.content-header__identifiers {
  display: none;
}

.main-content-area {
  @include typography.body();
}
.main-content-area h1 {
  @include typography.heading-1();
}
.main-content-area h2 {
  @include typography.heading-2();
}
.main-content-area h3 {
  @include typography.heading-3();
}
.main-content-area h4 {
  @include typography.heading-4();
}

@media only all and (min-width: 730px) {
  .content-header {
    grid-column: 1/10;
    grid-row: 2;
  }

  .secondary-column {
    grid-column: 10 / 13;
    grid-row: 2/4;
  }

  .primary-column {
    grid-column: 1/10;
    grid-row: 3;
  }
}

@media only all and (min-width: 1000px) {

  .primary-column {
    display: grid;
  }

  .table-contents {
    grid-column: 1/3;
  }

  .main-content-area {
    grid-column: 3/10;
    padding: 0 48px;
  }

  main {
    border-top: 0;
    margin-top: 2rem;
  }
}
.primary-column {
  margin-top: 32px;
}

.toc-container {
  max-width: 69.625rem;
  margin: auto;
  border-left: 2px solid settings.$color-less-light-grey;
}

.toc-list {
  list-style: none;
  padding-left: 0px;
  margin-left: -2px;
  margin-top: 21.5px;
}

.toc-list__item {
  min-width: 150px;
  margin-bottom: 24px;
  padding-left: 20px;
  border-left: 2px solid settings.$color-less-light-grey;
  &:hover {
    border-left: 2px solid settings.$color-emphasis;
  }
}
.toc-list__item:last-child {
  margin-bottom: 0px;
}

.toc-list__item--selected {
  min-width: 150px;
  margin-bottom: 24px;
  padding-left: 20px;
  border-left: 2px solid settings.$color-emphasis;
}

.toc-list__link {
  @include typography.navigation-heading();
}

.toc-list__item--selected .toc-list__link {
  @include typography.navigation-heading-selected();
}

.article-status {
  @include _right-column-section();
  margin-top: 48px;

  @media only all and (min-width: 730px) {
    margin-top: 0;
  }
}

.article-status__heading {
  font-family: settings.$font-family-primary;
  font-size: 18px;
  line-height: 22px;
  font-weight: 600;
  margin-top: 0;
  color: settings.$color-emphasis
}

.article-status__text {
  @include typography.body-small;
  font-size: 12px;
  font-weight: 600;
  line-height: 22px;
}

.article-actions {
  padding-top: 36px;
}

.article-actions__button {
  @include buttons.action-button();
  margin-bottom: 12px;
  margin-right: 6px;
  display: inline-block;

  &:nth-child(even) {
    margin-right: 0;
  }
}

.article-actions__button_icon{
  @include buttons.button-icon();
}

.review-timeline {
  @include _right-column-section();
}

.review-timeline__list {
  list-style: none;
  padding-left: 0;
}

.review-timeline__list_item {
  display: flex;
  justify-content: space-between;
  margin-bottom: 8px;
}

.review-timeline__event {
  @include typography.right-bar-text();
  font-weight: 600;
}

.review-timeline__date {
  @include typography.right-bar-text();
  color: settings.$color-text-inactive;
}

.review-timeline__reviews_link {
  @include typography.link-text();
}

.link-icon {
  vertical-align: bottom;
}

.article-metadata {
  @include _right-column-section();
}

.article-metrics {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

.article-metrics__item {
  @include typography.right-bar-text();
  color: settings.$color-text-inactive;
  display: inline;

  &::after {
    content: ", ";
  }

  &:last-child::after {
    content: "";
  }
}

.article-subject-areas {
  list-style: none;
  padding-left: 0;
  padding-top: 36px;
  margin-top: 0;
  display: flex;
  flex-wrap: wrap;
}

.article-subject-areas__item {
  @include buttons.subject-area-button();
  margin-right: 12px;
  margin-bottom: 12px;

  &:last-child {
    margin-right: 0;
  }
}

.article-metadata__similar_research_link {
  @include typography.link-text();
}

